MESSAGE("CMAKE_BINARY_DIRVector ${CMAKE_BINARY_DIR}")
MESSAGE("vec ${CMAKE_CURRENT_LIST_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Common)

MESSAGE("a ${CMAKE_BINARY_DIR}/Lib")
MESSAGE("ProjectDirVector ${PROJECT_SOURCE_DIR}")

LIST(APPEND VECTOR_SRCS ${CMAKE_CURRENT_LIST_DIR}/Vector.cpp)
#LIST(APPEND VECTOR_SRCS ${CMAKE_CURRENT_LIST_DIR}/Construct.hpp)

set(TAG Vector)
ADD_EXECUTABLE(${TAG} ${VECTOR_SRCS})
TARGET_LINK_LIBRARIES(${TAG} Common)